erroneous local link corrected

--- a/gnumed/gnumed/html/developers-manual/index.html
+++ b/gnumed/gnumed/html/developers-manual/index.html
@@ -28,7 +28,7 @@ to make a good thing  even better!   </p>
      <td bgcolor="#cccccc">last changed</td>
     </tr>
      <tr>
-         <td valign="top"><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/GNUMed_Database_Architecture.html">
+         <td valign="top"><a href="GNUMed_Database_Architecture.html">
 Database  architecture overview</a><br>
          </td>
          <td valign="top">Horst Herb<br>
@@ -37,7 +37,7 @@ Database  architecture overview</a><br>
          </td>
        </tr>
        <tr>
-         <td valign="top"><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/serviceslist.html">
+         <td valign="top"><a href="serrviceslist.html">
 Distributed database  services</a><br>
          </td>
          <td valign="top">Horst Herb<br>
@@ -46,7 +46,7 @@ Distributed database  services</a><br>
          </td>
        </tr>
        <tr>
-      <td valign="top"><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/messenging.html">
+      <td valign="top"><a href="messenging.html" target="_blank">
 Internal messaging and signal dispatching</a><br>
       </td>
       <td valign="top">Horst Herb<br>
@@ -55,7 +55,7 @@ Internal messaging and signal dispatching</a><br>
       </td>
     </tr>
     <tr>
-      <td valign="top"><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/signals.html">
+      <td valign="top"><a href="signals.html" target="_blank">
 List of available signals/messages</a><br>
       </td>
       <td valign="top">Horst Herb<br>
@@ -64,7 +64,7 @@ List of available signals/messages</a><br>
       </td>
     </tr>
     <tr>
-        <td valign="top"><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/appointments.html" target="_blank=">
+        <td valign="top"><a href="appointments.html" target="_blank">
 Appointment book</a><br>
         </td>
         <td valign="top">Horst Herb<br>
@@ -73,37 +73,37 @@ Appointment book</a><br>
         </td>
       </tr>
       <tr>
-    <td><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/loginscreen.html" target="_blank">
+    <td><a href="loginscreen.html" target="_blank">
 Login screen, overview</a></td>
      <td>Horst Herb</td>
      <td>25.07.2001</td>
     </tr>
      <tr>
-    <td><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/drugbrowser.html" name="Drug Browser" target="_blank">
+    <td><a href="drugbrowser.html" name="Drug Browser" target="_blank">
 Pharmaceutical  Reference Browser</a></td>
      <td>Richard Terry</td>
      <td>20.12.2001</td>
     </tr>
       <tr>
-    <td><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/codebrowser.html" type="text/html" target="_blank">
+    <td><a href="codebrowser.html" type="text/html" target="_blank">
 Code browser</a></td>
      <td>Horst Herb</td>
      <td>26.07.2001</td>
     </tr>
      <tr>
-    <td><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/prescriptiondialogue.html" target="_blank">
+    <td><a href="prescriptiondialogue.html" target="_blank">
 Prescription dialogue</a></td>
      <td>Horst Herb</td>
      <td>29.07.2001</td>
     </tr>
      <tr>
-    <td><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/pyshell.html" target="_blank">
+    <td><a href="pyshell.html" target="_blank">
 Python shell (the one and only)</a></td>
      <td>Horst Herb</td>
      <td>30.07.2001</td>
     </tr>
      <tr>
-    <td><a href="file:///home/hherb/gnumed/gnumed/html/developers-manual/sqlwin.html" target="_blank">
+    <td><a href="sqlwin.html" target="_blank">
 Interactive SQL Window</a></td>
      <td>Horst Herb</td>
      <td>31.07.2001</td>
