added drug_flags and minor changes

--- a/gnumed/gnumed/server/sql/gmdrugs.html
+++ b/gnumed/gnumed/server/sql/gmdrugs.html
@@ -2,7 +2,7 @@
    "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <title>Index for gmdrugs2</title>
+    <title>Index for gmdrugs</title>
     <style type="text/css">
 	BODY {
 		color:	#000000; 
@@ -107,7 +107,7 @@
     <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
   </head>
   <body>
-<p><br><br>Dumped on 2002-10-26.</p><a name="index"><h1>Index of database - gmdrugs2</h1><ul><li><a name="group_public">public</a></li><ul><li><a href="#table_adverse_effects">adverse_effects</a></li><li><a href="#table_audit">audit</a></li><li><a href="#table_audited_table">audited_table</a></li><li><a href="#table_available">available</a></li><li><a href="#table_code_systems">code_systems</a></li><li><a href="#table_conditions">conditions</a></li><li><a href="#table_drug_dosage">drug_dosage</a></li><li><a href="#table_drug_element">drug_element</a></li><li><a href="#table_drug_flags">drug_flags</a></li><li><a href="#table_drug_formulations">drug_formulations</a></li><li><a href="#table_drug_information">drug_information</a></li><li><a href="#table_drug_routes">drug_routes</a></li><li><a href="#table_drug_units">drug_units</a></li><li><a href="#table_drug_warning">drug_warning</a></li><li><a href="#table_drug_warning_categories">drug_warning_categories</a></li><li><a href="#table_generic_drug_name">generic_drug_name</a></li><li><a href="#table_info_reference">info_reference</a></li><li><a href="#table_interactions">interactions</a></li><li><a href="#table_link_compound_generics">link_compound_generics</a></li><li><a href="#table_link_country_drug_name">link_country_drug_name</a></li><li><a href="#table_link_drug_adverse_effects">link_drug_adverse_effects</a></li><li><a href="#table_link_drug_class">link_drug_class</a></li><li><a href="#table_link_drug_disease_interactions">link_drug_disease_interactions</a></li><li><a href="#table_link_drug_indication">link_drug_indication</a></li><li><a href="#table_link_drug_information">link_drug_information</a></li><li><a href="#table_link_drug_interactions">link_drug_interactions</a></li><li><a href="#table_link_drug_warning">link_drug_warning</a></li><li><a href="#table_link_flag_product">link_flag_product</a></li><li><a href="#table_link_product_component">link_product_component</a></li><li><a href="#table_link_product_manufacturer">link_product_manufacturer</a></li><li><a href="#table_manufacturer">manufacturer</a></li><li><a href="#table_product">product</a></li><li><a href="#table_subsidies">subsidies</a></li><li><a href="#table_subsidized_products">subsidized_products</a></li><li><a href="#table_substance_dosage">substance_dosage</a></li><li><a href="#function_audit_func(  )">audit_func(  )</a></li><li><a href="#function_plpython_call_handler(  )">plpython_call_handler(  )</a></li></ul></ul><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_adverse_effects">adverse_effects</a></h2><p>listing of possible adverse effects to drugs</p><table width="100%" cellspacing="0" cellpadding="3">
+<p><br><br>Dumped on 2002-10-27.</p><a name="index"><h1>Index of database - gmdrugs</h1><ul><li><a name="group_public">public</a></li><ul><li><a href="#table_adverse_effects">adverse_effects</a></li><li><a href="#table_audit">audit</a></li><li><a href="#table_audited_table">audited_table</a></li><li><a href="#table_available">available</a></li><li><a href="#table_code_systems">code_systems</a></li><li><a href="#table_conditions">conditions</a></li><li><a href="#table_drug_dosage">drug_dosage</a></li><li><a href="#table_drug_element">drug_element</a></li><li><a href="#table_drug_flags">drug_flags</a></li><li><a href="#table_drug_formulations">drug_formulations</a></li><li><a href="#table_drug_information">drug_information</a></li><li><a href="#table_drug_routes">drug_routes</a></li><li><a href="#table_drug_units">drug_units</a></li><li><a href="#table_drug_warning">drug_warning</a></li><li><a href="#table_drug_warning_categories">drug_warning_categories</a></li><li><a href="#table_generic_drug_name">generic_drug_name</a></li><li><a href="#table_info_reference">info_reference</a></li><li><a href="#table_information_topic">information_topic</a></li><li><a href="#table_interactions">interactions</a></li><li><a href="#table_link_compound_generics">link_compound_generics</a></li><li><a href="#table_link_country_drug_name">link_country_drug_name</a></li><li><a href="#table_link_drug_adverse_effects">link_drug_adverse_effects</a></li><li><a href="#table_link_drug_class">link_drug_class</a></li><li><a href="#table_link_drug_disease_interactions">link_drug_disease_interactions</a></li><li><a href="#table_link_drug_indication">link_drug_indication</a></li><li><a href="#table_link_drug_information">link_drug_information</a></li><li><a href="#table_link_drug_interactions">link_drug_interactions</a></li><li><a href="#table_link_drug_warning">link_drug_warning</a></li><li><a href="#table_link_flag_product">link_flag_product</a></li><li><a href="#table_link_product_component">link_product_component</a></li><li><a href="#table_link_product_manufacturer">link_product_manufacturer</a></li><li><a href="#table_manufacturer">manufacturer</a></li><li><a href="#table_product">product</a></li><li><a href="#table_subsidies">subsidies</a></li><li><a href="#table_subsidized_products">subsidized_products</a></li><li><a href="#table_substance_dosage">substance_dosage</a></li><li><a href="#function_audit_func(  )">audit_func(  )</a></li><li><a href="#function_get_drug_name( integer )">get_drug_name( integer )</a></li><li><a href="#function_plpython_call_handler(  )">plpython_call_handler(  )</a></li></ul></ul><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_adverse_effects">adverse_effects</a></h2><p>listing of possible adverse effects to drugs</p><table width="100%" cellspacing="0" cellpadding="3">
                 <caption>public.adverse_effects Structure</caption>
                 <tr>
                 <th>F-Key</th>
@@ -185,7 +185,7 @@
                 </tr><tr class="tr0"><td></td><td>id</td>
                   <td>serial</td><td><i>NOT NULL UNIQUE </i></td></tr><tr class="tr1"><td></td><td>comment</td>
                   <td>text</td><td></td></tr><tr class="tr0"><td></td><td>authority</td>
-                  <td>boolean</td><td>true if prescriber must contact the third-party before approval</td></tr></table><p>Tables referencing this one via Foreign Key Constraints:</p><ul><li><a href="#table_subsidized_products">public.subsidized_products</a></li></ul><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_drug_dosage">drug_dosage</a></h2><p>A table linking drugs to dosage recommendations</p><table width="100%" cellspacing="0" cellpadding="3">
+                  <td>boolean</td><td>true if prescriber must contact the third-party before approval</td></tr></table><p>Tables referencing this one via Foreign Key Constraints:</p><ul><li><a href="#table_subsidized_products">public.subsidized_products</a></li></ul><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_drug_dosage">drug_dosage</a></h2><p>A table linking drugs to dosage recommendations. This is the old link_drug_dosage. Refers to drugs, both compounds and single-substances.</p><table width="100%" cellspacing="0" cellpadding="3">
                 <caption>public.drug_dosage Structure</caption>
                 <tr>
                 <th>F-Key</th>
@@ -247,16 +247,11 @@
                 </tr><tr class="tr0"><td></td><td>id</td>
                   <td>serial</td><td><i>NOT NULL PRIMARY KEY </i></td></tr><tr class="tr1"><td><a href="#table_info_reference">public -> info_reference</a>
                   </td><td>id_info_reference</td>
-                  <td>integer</td><td></td></tr><tr class="tr0"><td></td><td>target</td>
-                  <td>character(1)</td><td>the target of this information: h=health professional, p=patient</td></tr><tr class="tr1"><td></td><td>info</td>
-                  <td>text</td><td>the drug product information in HTML format</td></tr><tr class="tr0"><td></td><td>comment</td>
-                  <td>text</td><td></td></tr></table><p>&nbsp;</p><table width="100%" cellspacing="0" cellpadding="3">
-                    <caption>public.drug_information Constraints</caption>
-                    <tr>
-                    <th>Name</th>
-                    <th>Constraint</th>
-                    </tr><tr class="tr0"><td>drug_information_target</td>
-                      <td>CHECK (target = &apos;h&apos;::bpchar) OR (target = &apos;p&apos;::bpchar)</td></tr></table><p>Tables referencing this one via Foreign Key Constraints:</p><ul><li><a href="#table_link_drug_information">public.link_drug_information</a></li></ul><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_drug_routes">drug_routes</a></h2><p>administration routes of drugs</p><table width="100%" cellspacing="0" cellpadding="3">
+                  <td>integer</td><td></td></tr><tr class="tr0"><td></td><td>info</td>
+                  <td>text</td><td>the drug product information in HTML format</td></tr><tr class="tr1"><td><a href="#table_information_topic">public -> information_topic</a>
+                  </td><td>id_topic</td>
+                  <td>integer</td><td></td></tr><tr class="tr0"><td></td><td>comment</td>
+                  <td>text</td><td></td></tr></table><p>Tables referencing this one via Foreign Key Constraints:</p><ul><li><a href="#table_link_drug_information">public.link_drug_information</a></li></ul><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_drug_routes">drug_routes</a></h2><p>administration routes of drugs</p><table width="100%" cellspacing="0" cellpadding="3">
                 <caption>public.drug_routes Structure</caption>
                 <tr>
                 <th>F-Key</th>
@@ -328,7 +323,23 @@
                     <th>Name</th>
                     <th>Constraint</th>
                     </tr><tr class="tr0"><td>info_reference_source_category</td>
-                      <td>CHECK (((((source_category = &apos;p&apos;::bpchar) OR (source_category = &apos;a&apos;::bpchar)) OR (source_category = &apos;i&apos;::bpchar)) OR (source_category = &apos;m&apos;::bpchar)) OR (source_category = &apos;o&apos;::bpchar)) OR (source_category = &apos;s&apos;::bpchar)</td></tr></table><p>Tables referencing this one via Foreign Key Constraints:</p><ul><li><a href="#table_audit">public.audit</a></li><li><a href="#table_drug_dosage">public.drug_dosage</a></li><li><a href="#table_drug_information">public.drug_information</a></li><li><a href="#table_drug_warning">public.drug_warning</a></li></ul><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_interactions">interactions</a></h2><p>possible interactions between drugs</p><table width="100%" cellspacing="0" cellpadding="3">
+                      <td>CHECK (((((source_category = &apos;p&apos;::bpchar) OR (source_category = &apos;a&apos;::bpchar)) OR (source_category = &apos;i&apos;::bpchar)) OR (source_category = &apos;m&apos;::bpchar)) OR (source_category = &apos;o&apos;::bpchar)) OR (source_category = &apos;s&apos;::bpchar)</td></tr></table><p>Tables referencing this one via Foreign Key Constraints:</p><ul><li><a href="#table_audit">public.audit</a></li><li><a href="#table_drug_dosage">public.drug_dosage</a></li><li><a href="#table_drug_information">public.drug_information</a></li><li><a href="#table_drug_warning">public.drug_warning</a></li></ul><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_information_topic">information_topic</a></h2><p>topics for drug information, such as pharmaco-kinetics, indications, etc.</p><table width="100%" cellspacing="0" cellpadding="3">
+                <caption>public.information_topic Structure</caption>
+                <tr>
+                <th>F-Key</th>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Description</th>
+                </tr><tr class="tr0"><td></td><td>id</td>
+                  <td>serial</td><td><i>NOT NULL UNIQUE </i></td></tr><tr class="tr1"><td></td><td>title</td>
+                  <td>character varying(60)</td><td></td></tr><tr class="tr0"><td></td><td>target</td>
+                  <td>character(1)</td><td>the target of this information: h=health professional, p=patient</td></tr></table><p>&nbsp;</p><table width="100%" cellspacing="0" cellpadding="3">
+                    <caption>public.information_topic Constraints</caption>
+                    <tr>
+                    <th>Name</th>
+                    <th>Constraint</th>
+                    </tr><tr class="tr0"><td>information_topic_target</td>
+                      <td>CHECK (target = &apos;h&apos;::bpchar) OR (target = &apos;p&apos;::bpchar)</td></tr></table><p>Tables referencing this one via Foreign Key Constraints:</p><ul><li><a href="#table_drug_information">public.drug_information</a></li></ul><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_interactions">interactions</a></h2><p>possible interactions between drugs</p><table width="100%" cellspacing="0" cellpadding="3">
                 <caption>public.interactions Structure</caption>
                 <tr>
                 <th>F-Key</th>
@@ -555,7 +566,7 @@
                   <td>double precision</td><td><i>default 0</i><br><br>patient co-payment under subsidy regulation; if this is absolute or percentage is regulation dependend and not specified here</td></tr><tr class="tr1"><td><a href="#table_conditions">public -> conditions</a>
                   </td><td>condition</td>
                   <td>integer</td><td>condition that must be fulfilled so that this subsidy applies</td></tr><tr class="tr0"><td></td><td>comment</td>
-                  <td>text</td><td></td></tr></table><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_substance_dosage">substance_dosage</a></h2><p>Dosage suggestion for a particular /substance/ (not compound)</p><table width="100%" cellspacing="0" cellpadding="3">
+                  <td>text</td><td></td></tr></table><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Table: <a href="#group_public">public</a>.<a name="table_substance_dosage">substance_dosage</a></h2><p>Dosage suggestion for a particular /substance/ (not compound). This the old dosage.</p><table width="100%" cellspacing="0" cellpadding="3">
                 <caption>public.substance_dosage Structure</caption>
                 <tr>
                 <th>F-Key</th>
@@ -578,4 +589,4 @@
                     <th>Name</th>
                     <th>Constraint</th>
                     </tr><tr class="tr0"><td>substance_dosage_dosage_type</td>
-                      <td>CHECK (((dosage_type = &apos;*&apos;::bpchar) OR (dosage_type = &apos;w&apos;::bpchar)) OR (dosage_type = &apos;s&apos;::bpchar)) OR (dosage_type = &apos;a&apos;::bpchar)</td></tr></table><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Function: <a href="#group_public">public</a>.<a name="function_audit_func(  )">audit_func(  )</a></h2><pre>Python trigger function to create audit entries</pre><hr><h2>Function: <a href="#group_public">public</a>.<a name="function_plpython_call_handler(  )">plpython_call_handler(  )</a></h2><pre>NO COMMENT</pre><p class="w3ref"><a href="http://validator.w3.org/check/referer">W3C HTML 4.01 Strict</a></p></body></html>
+                      <td>CHECK (((dosage_type = &apos;*&apos;::bpchar) OR (dosage_type = &apos;w&apos;::bpchar)) OR (dosage_type = &apos;s&apos;::bpchar)) OR (dosage_type = &apos;a&apos;::bpchar)</td></tr></table><p><a href="#index">Index</a> - <a href="#group_public">Schema public</a></p><hr><h2>Function: <a href="#group_public">public</a>.<a name="function_audit_func(  )">audit_func(  )</a></h2><pre>Python trigger function to create audit entries</pre><hr><h2>Function: <a href="#group_public">public</a>.<a name="function_get_drug_name( integer )">get_drug_name( integer )</a></h2><pre>guaranteed returns a name for a drug/class</pre><hr><h2>Function: <a href="#group_public">public</a>.<a name="function_plpython_call_handler(  )">plpython_call_handler(  )</a></h2><pre>NO COMMENT</pre><p class="w3ref"><a href="http://validator.w3.org/check/referer">W3C HTML 4.01 Strict</a></p></body></html>
